# ffmpeg_openCV

./: .gitignore  CMakeLists.txt  README.md
config/: nginx.conf
html/: live_stream.html
src/: main.cpp  video_processor.cpp  video_processor.h
src/core/: event_processor.cpp  event_processor.h  streaming.cpp  streaming.h  video_processor.cpp  video_processor.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
